# ve-analyse

./: .gitignore  README.md  pyproject.toml
examples/: afr.tsv  example.msl  ve.tsv
packaging/: ve-analyse-portable.spec
scripts/: build-portable-windows.ps1
src/ve_analyse/: __init__.py  analyzer.py  cli.py  datalog.py  graph.py  gui.py  launcher.py  state.py  table.py  webapi.py  webui.py
src/ve_analyse/web_static/: app.css  app.js  index.html
tests/: test_ve_analyse.py
